트러블슈팅 내용 readme.md 추가